tests/compile/compile_fail/angle_deg_call_sin.rs
use echo_math::*;

fn main() {
    let a = DegAngle::<f32>::from_degrees(45.0);
    let s = a.sin();
}
