tests/compile/compile_fail/angle_deg_call_sin.stderr
error[E0599]: no method named `sin` found for struct `Angle<f32, Deg>` in the current scope
 --> tests/compile/compile_fail/angle_deg_call_sin.rs:5:15
  |
5 |     let s = a.sin();
  |               ^^^ method not found in `Angle<f32, Deg>`
  |
  = note: the method was found for
          - `Angle<T, Rad>`
